--- a/Latex/latex模板.tex
+++ b/Latex/latex模板.tex
@@ -52,8 +52,32 @@
 \usepackage{hyperref}%扩展参考文献，目录功能和加入超链接。
 
 % title
-%\usepackage{titlesec}%花哨的章节标题
+\usepackage{titlesec}%花哨的章节标题
+
+\usepackage{etoolbox}
+\makeatletter
+\patchcmd{\ttlh@hang}{\parindent\z@}{\parindent\z@\leavevmode}{}{}
+\patchcmd{\ttlh@hang}{\noindent}{}{}{}
+\makeatother%titlesec旧版本无编号问题
+
 %\titleformat{\section}[frame]{\normalfont}{\filright\footnotesize\enspace SECTION \thesection\enspace}{8pt}{\Large\bfseries\filcenter}
+
+\titleformat
+{\section} % command
+[display] % shape
+{\bfseries\Large} % format
+{第\ \thesection 章\ } % label
+{0.3ex} % sep
+{
+    \rule{\textwidth}{2pt}
+    \vspace{1ex}
+    \centering
+} % before-code
+[
+\vspace{-2ex}%
+\rule{\textwidth}{1pt}
+] % after-code
+
 
 %tightly-packed lists
 \usepackage{mdwlist}
@@ -66,6 +90,7 @@
 \setlength{\headheight}{15pt}
 \pagestyle{fancy}
 \fancyhf{}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -206,6 +231,9 @@
 }%
 }
 
+\usepackage{styles/lshort}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 \title{\vspace{-2em}Latex模板\vspace{0.7em}}
@@ -214,7 +242,21 @@
 \maketitle\thispagestyle{fancy}%在上部添加横线
 \maketitle
 \tableofcontents 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{\LaTeX 模板}
+
+\subsection{Testing}
+
+\subsubsection{testing}
+
+\begin{example}
+\LaTeX-using
+\end{example}
+
 
 详细版式更改请依照tex文档中使用包的简易说明，对欲修改项目进行查询～
+
+P.S. 欢迎更新～
 
 \end{document}
