--- a/LaTeX/LaTeX模板.tex
+++ b/LaTeX/LaTeX模板.tex
@@ -241,7 +241,7 @@
 \author{丁昊}%作者
 \date{\vspace{-0.7em}2016年7月\vspace{-0.7em}}%日期
 \maketitle\thispagestyle{fancy}%在上部添加横线
-\maketitle
+\newpage
 \tableofcontents 
 \newpage
 
