amend the template

--- a/LaTeX/LaTeX-GettingStarted/styles/visionouclistings.sty
+++ b/LaTeX/LaTeX-GettingStarted/styles/visionouclistings.sty
@@ -91,11 +91,7 @@
   }
 }{}
 
-\lstnewenvironment{latexcode}[1]{ %代码高亮
-\lstset{
-language={[latex]tex}, 
-}
-}{}
+%\lstnewenvironment{latexcode}[1]{\lstset{language=[latex]tex} \lstset{#1}}{}
 
 \lstnewenvironment{Rcode}{
   \lstset{%
