--- a/LaTeX/LaTeX-install/LaTeX-install.tex
+++ b/LaTeX/LaTeX-install/LaTeX-install.tex
@@ -82,8 +82,8 @@
 \usepackage{mdwlist}
 \usepackage{verbatim}%comment命令的注释包
 \usepackage{styles/zhfontcfg}%中文包
-\usepackage{styles/iplouclistings}
-\usepackage{styles/iplouccfg}
+\usepackage{styles/visionouclistings}
+\usepackage{styles/visionouccfg}
 
 % head/foot
 \setlength{\headheight}{15pt}
