--- a/LaTeX/styles/zhfontcfg.sty
+++ b/LaTeX/styles/zhfontcfg.sty
@@ -2,8 +2,7 @@
 
 \ProvidesPackage{zhfontcfg}
 
-\usepackage{xunicode,xltxtra}  % for XeTeX
-\usepackage{fontspec}
+\usepackage{fontspec,xunicode,xltxtra}  % for XeTeX
 \usepackage[BoldFont,SlantFont,CJKnumber,CJKchecksingle]{xeCJK}  
 
 \defaultfontfeatures{Mapping=tex-text} %如果没有它，会有一些 tex 特殊字符无法正常使用，比如连字符。
