--- a/LaTeX/LaTeX-GettingStarted/LaTeX-GettingStarted.tex
+++ b/LaTeX/LaTeX-GettingStarted/LaTeX-GettingStarted.tex
@@ -82,8 +82,8 @@
 \usepackage{mdwlist}
 \usepackage{verbatim}%comment命令的注释包
 \usepackage{styles/zhfontcfg}%中文包
-\usepackage{styles/iplouclistings}
-\usepackage{styles/iplouccfg}
+\usepackage{styles/visionouclistings}
+\usepackage{styles/visionouccfg}
 
 % head/foot
 \setlength{\headheight}{15pt}
@@ -107,13 +107,6 @@
 \vskip-2\headrulewidth\vskip-1pt}      %两条线的距离        
 \vspace{16mm}}     %双线与下面正文之间的垂直间距              
 \makeatother         
-                       
-\chead{\color{GREY}LATEX-GETTINGSTARTED}%页眉
-\cfoot{\color{GREY}Augeust 2016}%页脚 中
-\lfoot{\color{GREY}Dinghao}%页脚 左
-\rfoot{\color{GREY}$\cdot$\ Page \thepage\ }%页脚 右
-\renewcommand{\headrulewidth}{0.4pt}
-\renewcommand{\footrulewidth}{0.4pt}
 
 
 % graphics
@@ -232,6 +225,14 @@
     };
 }%
 }
+                       
+\chead{\color{GREY}\LaTeX-GETTINGSTARTED}%页眉
+\cfoot{\color{GREY}Augeust 2016}%页脚 中
+\lfoot{\color{GREY}DingHao}%页脚 左
+\rfoot{\color{GREY}$\cdot$\ Page \thepage\ }%页脚 右
+\renewcommand{\headrulewidth}{0.4pt}
+\renewcommand{\footrulewidth}{0.4pt}
+
 
 \usepackage{styles/lshort}
 
@@ -243,14 +244,15 @@
 \author{丁昊}%作者
 \date{\vspace{-0.7em}2016年7月\vspace{-0.7em}}%日期
 \maketitle\thispagestyle{fancy}%在上部添加横线
+\newpage
 \tableofcontents
 \newpage
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{abstract}
-这篇文档作者写的虽然是我的名字，事实上却是因为我很难把那么多名字统统写进来。首先，本文档后半部分内容主要来源于孙雪，戴嘉伦两位师兄师姐和郑海永老师的《\LaTeX 简短使用手册》。版式的设置部分参照了常林师姐的文档模板，并采取了崔金娜、谭林和王超的很多建议。写这篇文档的过程对我也是个挑战，郑老师帮我解决了一系列编写中遇到的问题。且本文的绝大部分实际内容来自于官方编写的《一份不太简短的\LaTeXe 介绍》(后文简称为《介绍》)，所以说我实际上是做了大量整理工作而非原创性工作。\par
-但是到目前为止，上面提到的这些及网上的文档要不太长，要不难以满足翻遍电脑找不到\LaTeX .exe在哪的初学级菜鸟的需求，我尽我最大的努力给予一些我在那个阶段最想要知道的一些信息，尽量的总结至一天可以学会的量，而不再需要你们将一整天一整天的时间耗费在百度和谷歌上。\par
+这篇文档作者写的虽然是我的名字，事实上却是因为我很难把那么多名字统统写进来。首先，本文档后半部分内容主要来源于孙雪，戴嘉伦两位师兄师姐和郑海永老师的《\LaTeX 简短使用手册》。版式的设置部分参照了常琳师姐的文档模板，并采取了崔金娜、谭琳和王超的很多建议。写这篇文档的过程对我也是个挑战，郑老师帮我解决了一系列编写中遇到的问题。且本文的绝大部分实际内容来自于官方编写的《一份不太简短的\LaTeXe 介绍》(后文简称为《介绍》)，所以说我实际上是做了大量整理工作而非原创性工作。\par
+但是到目前为止，上面提到的这些及网上的文档要不太长，要不难以满足翻遍电脑找不到\LaTeX 可执行文件在哪的初学级菜鸟的需求，我尽我最大的努力给予一些我在那个阶段最想要知道的一些信息，尽量的总结至一天可以学会的量，而不再需要你们将一整天又一整天的时间耗费在百度和谷歌上。\par
 最后，我个人的水平着实有限，希望这份文档可以被不断的修改和更新，并以更好的样子服务更多的师弟师妹。
 \end{abstract}
 \newpage
@@ -265,14 +267,14 @@
 
 \subsection{我们为什么学习\LaTeX ?}
 
-习惯于Windows界面的我们，为什么要踏上Linux的不归路？最适应Word的我们，为什么非要使用\LaTeX ?除了导师或未来公司有相应要求，我个人认为主要有以下几点:
+习惯于Windows界面的我们，为什么要踏上Linux的不归路？最适应Word的我们，为什么非要使用\LaTeX ？除了导师或未来公司有相应要求，我个人认为主要有以下几点:
 
 \begin{itemize}
-\item 无论是Windows系统还是office软件，都是有能力与计算机自由交谈的程序员们，为了让现今社会绝大部分的普通人，都能便捷的使用计算机这一现代科技，而在人与电脑之间辛苦构建起的宏大桥梁。这些界面华丽的系统和软件，一切以便利为主，人们无需多做思考就能得到希望得到的讯息。可是就如同我们要学习c,matlab等各种语言一样，我们希望自己有能力与计算机面对面沟通。已经制作好的软件功能一定是有限的，可是放在一个开源的世界，我们想到什么，就可以做到什么。有了“渔”的本领，想要得到“鱼”，岂不是手到擒来。
+\item 无论是Windows系统还是Office软件，都是有能力与计算机自由交谈的程序员们，为了让现今社会绝大部分的普通人，都能便捷的使用计算机这一现代科技，而在人与电脑之间辛苦构建起的宏大桥梁。这些界面华丽的系统和软件，一切以便利为主，人们无需多做思考就能得到希望得到的讯息。可是就如同我们要学习C、Matlab等各种语言一样，我们希望自己有能力与计算机面对面沟通。已经制作好的软件功能一定是有限的，可是放在一个开源的世界，我们想到什么，就可以做到什么。有了“渔”的本领，想要得到“鱼”，岂不是手到擒来。
 
-\item 在信息这个如此大范畴的领域当中，我们难以望其项背的大神们，每一个都拥有畅游开源世界的能力。如果软件出现bug,闭源的Windows只允许你提交反馈,反馈量的巨大使得问题长时间无人修复,相同的事情出现在Linux,我们除了给创始人发送邮件和去贴吧吐槽之外,还可以自己修改代码,或改进功能。自己成为作为系统更新者之一，是不是听起来就很赞？
+\item 在信息这个如此大范畴的领域当中，我们难以望其项背的大神们，每一个都拥有畅游开源世界的能力。如果软件出现bug，闭源的Windows只允许你提交反馈，反馈量的巨大使得问题长时间无人修复，相同的事情出现在Linux，我们除了给创始人发送邮件和去贴吧吐槽之外，还可以自己修改代码，或改进功能。自己成为系统更新者之一，是不是听起来就很赞？
 
-\item 说了这么多,接下来讲讲\LaTeX 相较Word的优势。首先是文档自动排版功能,用户只能使用结构化的方式写作,导致输出的PDF结构树清晰。自定义宏包和公式的功能使得\LaTeX 无限的强大,有能力输出任何你想得到的排版方式。数学公式自动编号与代码的便利编写对我们专业的好处更不必说。网上看到一个很有意思的总结贴在这里:不会用word得到很丑的文档,不会用\LaTeX 没有文档;会用word得到文档，会用\LaTeX 得到漂亮的文档;用的好,word和\LaTeX 都可以得到牛逼的文档。
+\item 说了这么多，接下来讲讲\LaTeX 相较Word的优势。首先是文档自动排版功能，用户只能使用结构化的方式写作，这使得输出的PDF结构非常的清晰。自定义宏包和公式的功能使得\LaTeX 无限的强大，有能力输出任何你想得到的排版方式。数学公式自动编号与代码的便利编写对我们专业的好处更不必说。网上看到一个很有意思的总结贴在这里：不会用Word得到很丑的文档，不会用\LaTeX 没有文档；会用Word得到文档，会用\LaTeX 得到漂亮的文档；用的好，Word和\LaTeX 都可以得到牛逼的文档。
 \end{itemize}
 \newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -280,13 +282,13 @@
 
 \subsection{创建与使用}
 
-相信看到这里,你已经装好\LaTeX 并信心满满的准备使用了,如果没有,请去阅读LaTeX-install.pdf后再读一遍第一句。
+相信看到这里，你已经装好\LaTeX 并信心满满的准备使用了，如果没有，请去阅读LaTeX-install.pdf。
 
-首先我们来创建一个文档,位置随你,我的选择是在Home/tool/Texlive/文件夹下集中管理我的所有\LaTeX 文档。这里有一个小建议,因为每份\LaTeX 文档生成过程中,都会同时产出几个附加文档,所以你写的每个文档最好放在不同的文件夹下。下面所有的操作都推荐像我一样使用终端来进行控制。
+首先我们来创建一个文档，位置随你，我的选择是在～/TeXLive文件夹下集中管理我的所有\LaTeX 文档。这里有一个小建议，因为每份\LaTeX 文档生成过程中，都会同时产出几个附加文档，所以你写的每个文档最好放在不同的文件夹下。下面所有的操作都推荐像我一样使用终端来进行控制。
 
 1.来到该目录下:
 \begin{verbatim}
-       cd ~/tool/Texlive/
+       cd ~/TeXLive/
 \end{verbatim}
 
 
@@ -343,7 +345,7 @@
 \begin{itemize}
 \item options:用来调整字体大小，单面双面，纸张大小，公式对齐方式等等。
 \item class:标注文档类型，不同文档可以使用的宏包和语句都有些许区别。常用的有article（短报告、程序文档、本篇给你们的小教程）,report（毕业论文等长报告）,book（书）,slides（幻灯片）。
-\item Exp. $\backslash$documentclass[11pt,twoside,a4paper]\{article\}表示该文档排版为11磅字体的article格式，并得到A4纸上双面打印的效果。
+\item Example: $\backslash$documentclass[11pt,twoside,a4paper]\{article\}表示该文档排版为11磅字体的article格式，并得到A4纸上双面打印的效果。
 \end{itemize}
 以上已经够用，更详细说明见《介绍》Page8-表1.1,表1.2。
 
@@ -357,27 +359,29 @@
 当然，你完全可以复制已写好的\LaTeX 模板来编写自己的文档，这样做可以省略整个宏包的配置与设置过程。\par
 下面对常用宏包作一下简短的介绍：
 \begin{itemize}
-\item geometry:\qquad	\, 调整页面边距、行距等
-\item titlesec:\qquad	\quad \,	更改各级标题样式(该宏包在2016版Texlive自带的版本存在使文档丢失序号的问题，需要添加一段代码或自行下载新版进行更新后使用)
-\item fancyhdr:	\qquad	\,  更改更多页眉页脚设置
-\item fontspec:	\qquad	\quad 字体库
-\item color,xcolor:\qquad	添加更多颜色
-\item pagecolor:\qquad	\,\, 设置页面底色
+
+\item geometry:调整页面边距、行距等
+\item titlesec:更改各级标题样式(该宏包在2016版Texlive自带的版本存在使文档丢失序号的问题，需要添加一段代码或自行下载新版进行更新后使用)
+\item fancyhdr:更改更多页眉页脚设置
+\item fontspec:字体库
+\item color,xcolor:添加更多颜色
+\item pagecolor:设置页面底色
 \item amsmath,amsfonts,amssymb:一些数学公式包，可设置公式格式，编号等
-\item graphicx:	\qquad	\quad 插入图像
-\item listings:\qquad	\qquad	插入代码
-\item hyperref:\qquad	\quad\,	扩展参考文献，目录功能和加入超链接
-\item verbatim:	\qquad	\,\, 命令注释包，即调用后可即时输出特殊字符等
-\item zhfontcfg:\qquad	\quad 中文包
+\item graphicx:插入图像
+\item listings:插入代码
+\item hyperref:扩展参考文献，目录功能和加入超链接
+\item verbatim:命令注释包，即调用后可即时输出特殊字符等
+\item zhfontcfg:中文包
+
 \end{itemize}\par
-以上只是我认为较为重要的，欢迎补充。想要学习更多的宏包设置知识，不要去看类似宏包大全的网页，但需要你对照某个文档的宏包部分，针对想弄懂的宏包去search,并尽量自己一点一点的试验不同设置下的输出区别，本篇文档的该部分作了一些不太完整的说明，希望能够帮到你。
+以上只是我认为较为重要的，欢迎补充。想要学习更多的宏包设置知识，不要去看类似宏包大全的网页，但需要你对照某个文档的宏包部分，针对想弄懂的宏包去search，并尽量自己一点一点的试验不同设置下的输出区别，本篇文档的该部分作了一些不太完整的说明，希望能够帮到你。
 
 \subsubsection{正文}
 \LaTeX 的正文必须写在$\backslash$begin\{document\}和$\backslash$end\{document\}之间。一般来说，一篇article的组成无外乎标题、作者、日期、目录、摘要、分章节说明等部分。下面逐一列举了语句写法。\par
 \begin{itemize}
 \item 标题：\qquad \qquad $\backslash$title\{标题名称\}
 \item 作者：\qquad \qquad $\backslash$author\{作者\}
-\item 日期：\qquad \qquad $\backslash$data\{2016年7月\}
+\item 日期：\qquad \qquad $\backslash$date\{2016年7月\}
 \item 添加标题：\qquad $\backslash$maketitle
 \item 添加目录：\qquad $\backslash$tableofcontents
 \item 摘要：\qquad \qquad $\backslash$begin\{abstract\} 摘要内容 $\backslash$end\{abstract\}
@@ -396,6 +400,7 @@
 \subsection{文章分区与断行}
 \begin{enumerate}%空格
 \item 多个连续空格被视为一个空格，一个空白行（两个回车）表示另起一段，多个连续空行被视为一个空行：
+
 \begin{example}
 It does not matter whether you enter one
  or several       spaces after a word.
@@ -405,6 +410,7 @@ An empty line starts a new paragraph.
 \end{example}
 
 \item \LaTeX 的几个换行命令：[\textsl{这里这个展示环境没有做好，事实上前两个另起一段的命令开头是会产生两个缩进的}]%换行
+
 \begin{example}
 输入\par 或者两个回车
 
@@ -415,6 +421,7 @@ $\backslash$newpage 表示另起一页
 \end{example}
 
 \item 百分号后的本句内容被视为注释，不在PDF显示，长注释可使用comment环境：
+
 \begin{example}
 %短注释
 \begin{comment}
@@ -422,16 +429,18 @@ $\backslash$newpage 表示另起一页
 \end{comment}  
 \end{example}
 \end{enumerate}
-\begin{enumerate}
+
 \subsection{特殊字符}
 
+\begin{enumerate}
 \item \LaTeX 中有许多特殊字符不能够直接输出，下面几个常用的保留字符可以通过加反斜杠输出，其他特殊字符可以通过特殊命令得到%特殊字符
+
 \begin{example}
 \# \$ \% \^ \& \_ \{ \} $\backslash$
 \end{example}
 
-
 \item 内置字符串
+
 \begin{example}
 \today 
 
@@ -443,6 +452,7 @@ $\backslash$newpage 表示另起一页
 \end{example}
 
 \item 横杠
+
 \begin{example}
 daughter-in-law 连字号
 
@@ -454,32 +464,38 @@ $-1$ 减号
 \end{example}
 
 \item 波浪号
+
 \begin{example}
 http://rich.edu/$\sim$demo
 \end{example}
 
 \item 度的符号
+
 \begin{example}
 $-30\,^{\circ}\mathrm{C}$
 \end{example}
 
 \item 欧元符号
+
 \begin{example}
 \texteuro
 \end{example}
 
 \item 省略号
+
 \begin{example}
 \ldots
 \end{example}
 
 \item 禁止断词
+
 \begin{example}
 shelf\mbox{}ful  这个单词不会被断开
 加连字符到下一行
 \end{example}
 
 \item 注音符号和特殊字符
+
 \begin{example}
 H\^otel, na\"\i ve\\
 sm\o rrebr\o d, !'Se\ norita!\\
@@ -521,7 +537,7 @@ Footnotes\footnote{This is a footnote.}
 \subsection{排版}
 
 \begin{enumerate}
-\item 编号：Itemize、Enumerate、Description用法
+\item 编号：itemize、enumerate、description用法
 \begin{example}
 \begin{enumerate} %条目
 \item You can mix the list environments 
@@ -783,7 +799,7 @@ $\vdots\quad \ddots$
 \subsection{垂直取齐}
 
 \begin{enumerate}
-\item 垂直取齐的方法，主要是在欲取齐的地方加两个相邻的反斜杠。
+\item 括号中垂直取齐
 \begin{example}
 \begin{displaymath}
 \mathbf{X} =
@@ -873,10 +889,14 @@ This is my interesting theorem.
 \end{example}
 \subsection{粗体符号}
 
+\begin{example}
 \begin{displaymath}
 \mu, M \qquad
 \boldsymbol{\mu}, \boldsymbol{M}
 \end{displaymath}
+\end{example}
+\newpage
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 
 \section{代码高亮}
 
