finished the files

--- a/LaTeX/LaTeX-GettingStarted/LaTeX-GettingStarted.tex
+++ b/LaTeX/LaTeX-GettingStarted/LaTeX-GettingStarted.tex
@@ -421,8 +421,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{\LaTeX 书写规则与常用命令}
 
-\part{书写规则}
-\subsection{文章分区与断行}
+\subsection{书写规则}
+\subsubsection{文章分区与断行}
 \begin{enumerate}%空格
 \item 多个连续空格被视为一个空格，一个空白行（两个回车）表示另起一段，多个连续空行被视为一个空行：
 
@@ -455,7 +455,7 @@ $\backslash$newpage 表示另起一页
 \end{example}
 \end{enumerate}
 
-\subsection{特殊字符}
+\subsubsection{特殊字符}
 
 \begin{enumerate}
 \item \LaTeX 中有许多特殊字符不能够直接输出，下面几个常用的保留字符可以通过加反斜杠输出，其他特殊字符可以通过特殊命令得到%特殊字符
@@ -531,8 +531,8 @@ Stra\ss e
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\part{常用命令}
 \subsection{格式}
+
 \begin{enumerate}
 \item 命令后加空格需要一对大括号
 \begin{example}
@@ -558,8 +558,8 @@ Footnotes\footnote{This is a footnote.}
 \end{example}
 \end{enumerate}
 
-\part{环境}
-\subsection{排版}
+\subsection{环境}
+\subsubsection{排版}
 
 \begin{enumerate}
 \item 编号：itemize、enumerate、description用法
@@ -594,7 +594,7 @@ presented beautifully in a list.
 \end{center}
 \end{example}
 
-\subsection{插入}
+\subsubsection{插入}
 \item 引用、语录和韵文
 \begin{example}
 一个例子：
