--- a/LaTeX/LaTeX模板.tex
+++ b/LaTeX/LaTeX模板.tex
@@ -226,6 +226,39 @@
 }%
 }
 
+%code
+\definecolor{mygreen}{rgb}{0,0.6,0}
+\definecolor{mygray}{rgb}{0.5,0.5,0.5}
+\definecolor{mymauve}{rgb}{0.58,0,0.82}
+\lstset{
+ backgroundcolor=\color{white}, 
+ basicstyle = \footnotesize,       
+ breakatwhitespace = false,        
+ breaklines = true,                 
+ captionpos = b,                    
+ commentstyle = \color{mygreen}\bfseries,
+ extendedchars = false,             
+ frame =shadowbox, 
+ framerule=0.5pt,
+ keepspaces=true,
+ keywordstyle=\color{blue}\bfseries, % keyword style
+ language = C++,                     % the language of code
+ otherkeywords={string}, 
+ numbers=left, 
+ numbersep=5pt,
+ numberstyle=\tiny\color{mygray},
+ rulecolor=\color{black},         
+ showspaces=false,  
+ showstringspaces=false, 
+ showtabs=false,    
+ stepnumber=1,         
+ stringstyle=\color{mymauve},        % string literal style
+ tabsize=2,          
+ title=\lstname                      
+}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %设置标题页面
 
 \newcommand*{\titleGM}{\begingroup % 新命令：添加标题页
@@ -235,9 +268,9 @@
 \hspace*{0.05\textwidth} % 竖线和文本距离
 \parbox[b]{0.75\textwidth}{ % 文本最大右边距
 
-{\noindent\Huge\bfseries Ubuntu 16.04下安装 \\TexLive2016 \\[0.5\baselineskip] 并配置中文字体}\\[2\baselineskip] % 题目
-{\large \textit{一份\LaTeX 安装手册}}\\[4\baselineskip] % 标签或描述
-{\Large \textsc{丁昊}}\\ % 作者
+{\noindent\Huge\bfseries \LaTeX \\[0.5\baselineskip] 模板}\\[2\baselineskip] % 题目
+{\large \textit{这是一份模板文档}}\\[4\baselineskip] % 标签或描述
+{\Large \textsc{DingHao}}\\ % 作者
 
 \vspace{0.5\textheight} % 题目区域和作者间距
 {\noindent August 2016 }\\[\baselineskip] % Publisher and logo
@@ -245,11 +278,10 @@
 \endgroup}
 
 
-
                       
-\chead{\color{GREY}LATEX-INSTALL}%页眉
+\chead{\color{GREY}LATEX-模板}%页眉
 \cfoot{\color{GREY}August 2016}%页脚 中
-\lfoot{\color{GREY}ChangLin,DingHao}%页脚 左
+\lfoot{\color{GREY}DingHao}%页脚 左
 \rfoot{\color{GREY}$\cdot$\ Page \thepage\ }%页脚 右
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
@@ -259,12 +291,19 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
+\author{丁昊}%作者
+\date{\vspace{-0.7em}2016年7月\vspace{-0.7em}}%日期
 \titleGM\thispagestyle{empty}
 
 \pagenumbering{roman}
 
 \setcounter{page}{0}
+\newpage
 
+\begin{abstract}
+
+This is an abstract~
+\end{abstract}
 \newpage
 
 \tableofcontents 
@@ -274,167 +313,21 @@
 
 \pagenumbering{arabic}
 \newpage
-                      
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\section{\LaTeX 模板}
 
-\section{安装TexLive2016}
+\subsection{Testing}
 
-\begin{enumerate}
-\item 下载TexLive2016镜像文件到/home/Texlive(这个是你自己建立的文件夹，不一定叫做Texlive)
-\item 挂载镜像文件
+\subsubsection{testing}
 
-挂载：在终端输入
-
-sudo mount -o loop /home/changlin/software/texlive2016.iso /mnt
-
-\item 进行安装
-
-安装：在终端输入
-
-\begin{lstlisting}
-cd /mnt
-sudo ./install-tl
-\end{lstlisting}
-
-安装后默认的安装目录是/usr/local，这里的一个习惯是把个人下载的应用安装到/opt下，以方便拷贝，如需要请参照文件夹中中文版readme在安装过程中进行设置。
-
-注意：安装在opt下是需要在install那一步加入参数，不能简单的移动安装文件。
-
-\item 测试
-
-此时texlive就安装成功了，你可以在/home/tmp下新建一个test.tex的文档，比如
-
-\begin{lstlisting}
-\documentclass{article}
-\begin{document}
-This is a testing file!
-\end{document}
-\end{lstlisting}
-
-然后打开终端输入
-
-\begin{lstlisting}
-cd /home/Texlive
-xelatex test.tex
-\end{lstlisting}
-
-如果能生成一个PDF文件，里面的内容是"This is a testing file!" ，就说明安装成功了。
-
-\end{enumerate}
-
-\section{XeTeX中文配置}.
+\begin{example}
+\LaTeX-using
+\end{example}
 
 
-以下需要你建立的这个zhfontcfg.sty文件会随教程上传在github上，可以在styles文件夹中找到它。
+详细版式更改请依照tex文档中使用包的简易说明，对欲修改项目进行查询～
 
-\begin{enumerate}
-
-\item 在所新建测试文档的目录中新建一个zhfontcfg.sty的文件，然后使用命令sudo mktexlsr更新一下，文件的内容如下，a,b可以二选一,目前我的电脑上用的是b里面的内容。[a方案似乎不能成功，要求转移的几个字体包在安装文件夹中也没能找到，目前没有找到解决方案]
-\begin{enumerate}
-
-\item[a]版本
-\begin{lstlisting}
-% xetex/xelatex 字体设定宏包
-\ProvidesPackage{zhfontcfg}
-\usepackage{fontspec,xunicode}
-\usepackage[BoldFont,SlantFont,CJKnumber,CJKchecksingle]{xeCJK}  
-\defaultfontfeatures{Mapping=tex-text}
-%如果没有它，会有一些 tex 特殊字符无法正常使用，比如连字符。
-%中文断行
-\XeTeXlinebreaklocale "zh"
-\XeTeXlinebreakskip = 0pt plus 1pt minus 0.1pt
-\setCJKmainfont[BoldFont={SimHei}, ItalicFont={楷体_GB2312}]{SimSun}
-\setCJKfamilyfont{song}{SimSun}
-\setCJKfamilyfont{hei}{SimHei}
-\setCJKfamilyfont{kai}{楷体_GB2312}
-%楷体
-\newcommand{\kai}{\CJKfamily{kai}} 
-\def\kaishu{\kai}
-%黑体
-\newcommand{\hei}{\CJKfamily{hei}} 
-\def\heiti{\hei}
-%宋体
-\newcommand{\song}{\CJKfamily{song}} 
-\def\songti{\song}
-\end{lstlisting}
-
-将安装包里的simhei.ttf simsun.ttf 楷体\_GB2312.ttf文件复制到/usr/share/fonts/truetype下
-
-sudo cp -a simhei.ttf simsun.ttf 楷体\_GB2312.ttf /usr/share/fonts/truetype
-
-\item[b]版本
-\begin{lstlisting}
-% xetex/xelatex 字体设定宏包
-
-\ProvidesPackage{zhfontcfg}
-
-\usepackage{fontspec,xunicode,xltxtra}  % for XeTeX
-\usepackage[BoldFont,SlantFont,CJKnumber,CJKchecksingle]{xeCJK}  
-
-\defaultfontfeatures{Mapping=tex-text} 
-%如果没有它，会有一些 tex 特殊字符无法正常使用，比如连字符。
-
-% 中文断行
-\XeTeXlinebreaklocale "zh"
-\XeTeXlinebreakskip = 0pt plus 1pt minus 0.1pt
-
-\setCJKmainfont[BoldFont={Adobe Heiti Std}, 
-ItalicFont={Adobe Kaiti Std}]{Adobe Song Std}
-
-\setCJKfamilyfont{song}{Adobe Song Std}
-\setCJKfamilyfont{hei}{Adobe Heiti Std}
-\setCJKfamilyfont{kai}{Adobe Kaiti Std}
-
-%\setCJKmainfont[BoldFont={SimHei}, ItalicFont={楷体_GB2312}]{SimSun}
-
-%\setCJKfamilyfont{song}{SimSun}
-%\setCJKfamilyfont{hei}{SimHei}
-%\setCJKfamilyfont{kai}{楷体_GB2312} 
-
-%楷体
-\newcommand{\kai}{\CJKfamily{kai}} 
-\def\kaishu{\kai}
-%黑体
-\newcommand{\hei}{\CJKfamily{hei}} 
-\def\heiti{\hei}
-%宋体
-\newcommand{\song}{\CJKfamily{song}} 
-\def\songti{\song}
-\end{lstlisting}
-将Adobe-fonts-otf文件夹复制到/usr/share/fonts/truetype下
-
-sudo cp -a Adobe-fonts-otf /usr/share/fonts/truetype
-
-注意，Texlive2014版，这个文件夹就位于安装包中，但在16版安装后并没有这个文件夹，我的解决方案是对2014版安装后的该文件夹进行如上操作，该文件夹随本教程上传在github，如有更优方案请更新。
-
-\end{enumerate}
-
-\item 察看字体安装情况
-
-在终端输入
-
-fc-list :lang=zh-cn
-
-查看是否成功安装了步骤1所需的对应字体
-
-\item 测试
-
-新建一个名为test2.tex的测试文档,文档内容为
-
-\begin{lstlisting}
-\documentclass{article}
-\usepackage{zhfontcfg}
-\begin{document}
-中文测试
-\end{document}
-\end{lstlisting}
-
-输入命令xelatex test2.tex，若生成一个内容为“中文测试”的PDF文档，则说明配置成功了, 如果不行，尝试再次编译，或重启下电脑试试。
-
-注意，你的.tex文档应该与zhfontcfg.sty文件同在一个文件夹。
-
-\end{enumerate}
+P.S. 欢迎更新～
 
 \end{document}
