add explanations of message

--- a/Git/GitHub-GettingStarted.tex
+++ b/Git/GitHub-GettingStarted.tex
@@ -397,8 +397,8 @@ git status 命令可以查看文件在任何时候的状态。执行\textbf{git 
 ＊忽略未跟踪文件：在编译过程中，可能会产生一些不需要纳入Git管理的文件（通常为隐藏文件），此时我们可以将这些文件忽略，被忽略的文件将不会提交到Git。首先确保需要忽略的文件是未跟踪状态，如果已跟踪，请用取消指令取消跟踪。然后在项目仓库下创建.gitignore文件：\textbf{touch .gitignore}，写入要忽略的文件的扩展名，例如，想要忽略所有.DS\_Store文件，则写入  \textbf{*.DS\_Store }，保存退出即可。
 
 \subsubsection{提交文件}
-我们平时更多采用-m参数来直接提交文件及文件说明。执行 \textbf{git commit -m `message'}，即可直接提交文档hello。在这个语句中，git commit是提交文件的指令，`message'是说明,可自行更换。大家可以新建一个hello2文档，尝试在跟踪后，用\textbf{git commit}指令直接提交。这种提交方式会启动一个文本编辑器来用于提交说明，开头有一空行供你输入说明。此时的说明可以为空，也可以自行定义。提交之后，再次查看跟踪状态可发现已没有需要更新的文件。提交前要检查文件的跟踪状态，尤其修改的，新建的文件，要检查是已暂存了。此时，已经完成了第一步：将文件更新到本地仓库。
-
+我们平时更多采用-m参数来直接提交文件及文件说明。执行 \textbf{git commit -m `message'}，即可直接提交文档hello。在这个语句中，git commit是提交文件的指令，`message'是对本次提交的说明。（message在Git-GitHub的使用中非常重要，每次做更改的时候，都要在message部分概述自己的修改。如果一次性将所有文件跟踪，那么在提交时候，这些文件的message部分都是一样的，在我们需要不同的文件有不同的message的时候，可分别进行跟踪和提交，所以要谨慎使用git add . 及 git add *指令。）提交之后，再次查看跟踪状态可发现已没有需要更新的文件。提交前要检查文件的跟踪状态，尤其修改的，新建的文件，要检查是已暂存了。此时，已经完成了第一步：将文件更新到本地仓库。
+ 
 ＊跳过使用暂存区域：使用暂存区域的方式可以精心准备和检查待提交的文件，但是有时候却会非常繁琐，Git提供了一个跳过使用暂存区域的方式，直接 执行\textbf{git commit -a -m `message'}即可直接提交。 
 
 ＊查看提交历史：执行\textbf{git log}指令，可以看到以提交时间为顺序的所有更新， 若执行\textbf{git log -p -2}指令可以显示最近两次的更新；\textbf{git log --stat} 指令可以简要显示增加和删除的行数。执行\textbf{git log {-}{-}since=2.weeks}指令可以显示两周内的提交情况。除此之外，git log指令还有其他有趣的应用，具体可参考《git 中文教程》 第27页。
