--- a/MacOS/styles/zhfontcfg.sty
+++ b/MacOS/styles/zhfontcfg.sty
@@ -1,41 +1,34 @@
-
+% xetex/xelatex 字体设定宏包
 
 \ProvidesPackage{zhfontcfg}
 
-\usepackage{fontspec ,xunicode , xltxtra}
-% for XeTeX
-\usepackage[BoldFont,SlantFont,CJKnumber,CJKchecksingle]{xeCJK}
+\usepackage{fontspec,xunicode,xltxtra}  % for XeTeX
+\usepackage[BoldFont,SlantFont,CJKnumber,CJKchecksingle]{xeCJK}  
 
-
-\defaultfontfeatures{Mapping=tex-text} % 如 果 没 有 它 , 会 有 一 些 tex特殊字符无法正常使用 , 比如连字符 。
-
+\defaultfontfeatures{Mapping=tex-text} %如果没有它，会有一些 tex 特殊字符无法正常使用，比如连字符。
 
 % 中文断行
-\XeTeXlinebreaklocale"zh"
-\XeTeXlinebreakskip=0pt plus 1pt minus 0.1 pt
+\XeTeXlinebreaklocale "zh"
+\XeTeXlinebreakskip = 0pt plus 1pt minus 0.1pt
 
+\setCJKmainfont[BoldFont={Adobe Heiti Std}, ItalicFont={Adobe Kaiti Std}]{Adobe Song Std}
 
-\setCJKmainfont [BoldFont ={Adobe Heiti Std}, ItalicFont ={Adobe Kaiti Std}]{Adobe Song Std}
+\setCJKfamilyfont{song}{Adobe Song Std}
+\setCJKfamilyfont{hei}{Adobe Heiti Std}
+\setCJKfamilyfont{kai}{Adobe Kaiti Std}
 
-\setCJKfamilyfont {song}{Adobe Song Std}
-\setCJKfamilyfont {hei}{Adobe Heiti Std}
-\setCJKfamilyfont {kai}{Adobe Kaiti Std}
+%\setCJKmainfont[BoldFont={SimHei}, ItalicFont={楷体_GB2312}]{SimSun}
 
+%\setCJKfamilyfont{song}{SimSun}
+%\setCJKfamilyfont{hei}{SimHei}
+%\setCJKfamilyfont{kai}{楷体_GB2312} 
 
-%\ setCJKmainfont [ BoldFont ={ SimHei }, ItalicFont ={ 楷 体 _GB 2312}]{ SimSun }
-
-21 %\ setCJKfamilyfont {song }{ SimSun }
-22 %\ setCJKfamilyfont {hei }{ SimHei }
-23 %\ setCJKfamilyfont {kai }{ 楷 体 _GB 2312}
-24
-25 % 楷体
-26 \newcommand {\kai}{\CJKfamily {kai}}
-27 \def\kaishu {\kai}
-28 % 黑体
-29 \newcommand {\hei }{\CJKfamily {hei}}
-30 \def\ heiti {\hei}
-31 % 宋体
-32 \ newcommand {\song }{\CJKfamily {song}}
-33 \def\ songti {\song}
-
-
+%楷体
+\newcommand{\kai}{\CJKfamily{kai}} 
+\def\kaishu{\kai}
+%黑体
+\newcommand{\hei}{\CJKfamily{hei}} 
+\def\heiti{\hei}
+%宋体
+\newcommand{\song}{\CJKfamily{song}} 
+\def\songti{\song}
